--- a/main.html
+++ b/main.html
@@ -8,9 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-		<div>
+		<div id="text">
 			
-			<p>Welcome to the world of Web development</p>
+			Welcome to the world of Web development
 			
 			<div>
 
